fix(shs-6400): fix styles for stretched vertical cards grid

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.grid.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.grid.scss
@@ -33,6 +33,7 @@
 
   &__item {
     display: flex;
+    align-items: flex-start;
     margin-bottom: calc(#{hb-spacing-width('default', false)} / 2);
 
     @include grid-media-min('sm') {
