--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
@@ -57,6 +57,11 @@
     flex-flow: column nowrap;
   }
 
+  // Stretched vertical linked cards inside a grid.
+  .hb-stretch-vertical-linked-cards .hb-grid__item & {
+    align-self: stretch;
+  }
+
   &__img {
     overflow: hidden;
 
